# mockio-plus

./: .gitignore  changelog.md  make  mockio-plus.cabal  versions
proto/MockIOPlus/: Paths.hs
src/MockIO/: Base.hs  Directory.hs  FStat.hs  File.hs  Flock.hs  OpenFile.hs  Process.hs  Tests.hs
src/MockIO/Process/: CmdRW.hs  MLCmdSpec.hs  MLMakeIStream.hs  OutputDefault.hs
src/MockIO/T/: Process.hs
src/MockIOPlus/: Paths.hs
t/: mockio-plus-test.hs
