name:                mockio-plus

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.3.12.1
synopsis:            MonadIO, Mocked, Logged, with Text.
description:         MonadIO, Mocked, Logged, with Text.
cabal-version:       >= 1.10
license:             MIT
license-file:        LICENSE
author:              Martyn J. Pearce
maintainer:          haskell@sixears.com
build-type:          Simple
library
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  exposed-modules:    MockIO.Directory
                    , MockIO.File
                    , MockIO.FStat
                    , MockIO.Flock
                    , MockIO.OpenFile
                    , MockIO.Process
                    , MockIO.Process.CmdRW
                    , MockIO.Process.MLCmdSpec
                    , MockIO.Process.MLMakeIStream
                    , MockIO.Process.OutputDefault
                    , MockIO.Tests

  other-modules:      MockIO.T.Process, MockIOPlus.Paths
  default-extensions: FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , LambdaCase
                    , MonoLocalBinds
                    , MultiParamTypeClasses
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , PatternSynonyms
                    , QuasiQuotes
                    , RankNTypes
                    , ScopedTypeVariables
                    , TupleSections
                    , TypeApplications
                    , TypeSynonymInstances
                    , UnicodeSyntax
                    , ViewPatterns

  build-depends:      base, bytestring, containers, data-default , data-textual
                    , directory, exceptions, filelock, lens, logging-effect, mtl
                    , prettyprinter, process, safe, tasty, tasty-hunit, text
                    , text-icu

                    , base1t          >= 0.0.4.0
                    , containers-plus >= 0.0.10.1
                    , env-plus        >= 1.0.7.0
                    , fpath           >= 1.3.2.1
                    , fstat           >= 1.0.2.0
                    , log-plus        >= 0.0.4.4
                    , mockio          >= 0.0.4.4
                    , mockio-log      >= 0.1.1.0
                    , monaderror-io   >= 1.2.3.0
                    , monadio-plus    >= 2.4.3.0
                    , more-unicode    >= 0.0.16.0
                    , tasty-plus      >= 1.5.1.1
                    , tfmt            >= 0.2.6.0

  hs-source-dirs:      src
  default-language:    Haskell2010

-------------------------------------------------------------------------------

test-suite mockio-plus-test
  ghc-options:      -O2 -W -Wall -fhelpful-errors
  type:             exitcode-stdio-1.0
  hs-source-dirs:   t
  main-is:          mockio-plus-test.hs
  build-depends:    base, mockio-plus, tasty
  default-language: Haskell2010

-------------------------------------------------------------------------------
